# hippo

./: .coveragearc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: run_docs.yml  run_precommit.yml  run_tests.yml
docs/source/: conf.py  hippo.rst  index.rst  modules.rst
hippo/: __init__.py  example_module.py  launcher.py  main.py  server.py
hippo/api/: __init__.py  index.py
sample dataset/: ISIC_0015719.dcm  ISIC_0052212.dcm  ISIC_0068279.dcm  ISIC_0074311.dcm  ISIC_0075663.dcm  ISIC_0080752.dcm  ISIC_0082348.dcm  ISIC_0086462.dcm  ISIC_0096227.dcm  ISIC_0148677.dcm  ISIC_0149568.dcm  ISIC_0169687.dcm  ISIC_0171983.dcm
sample_dataset/: ISIC_0333589.dcm
tests/: test_example.py  test_launcher.py  test_main.py  test_server.py
tests/integration_tests/: test_integration_server_launcher.py
tests/test_api/: test_index.py
