[tool.poetry]
name = "hippo"
version = "0.1.0"
description = "This project is meant to help categorise images as diseased or healthy."
authors = ["mateimol <matei.moldoveanu@gmail.com>", "yribeiro <yohahnribeiro29@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
torch = "^1.10.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
