[tool.poetry]
name = "hippo"
version = "0.1.0"
description = "This project is meant to help categorise images as diseased or healthy."
authors = ["mateimol <matei.moldoveanu@gmail.com>", "yribeiro <yohahnribeiro29@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
torch = "^1.10.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.910"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
